manifests/integrated-tools/base/authentik/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-server
  template:
    metadata:
      labels:
        app: authentik-server
    spec:
      imagePullSecrets: 
        - name: github-pat-secret

      containers:
      - name: server
        image: ghcr.io/goauthentik/server:latest
        args: ["server"]
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 150m
            memory: 1024Mi
          limits:
            cpu: 150m
            memory: 1024Mi
        startupProbe:
          httpGet:
            path: /-/health/live/
            port: http
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /-/health/live/
            port: http
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /-/health/ready/
            port: http
            scheme: HTTP
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - name: media
          mountPath: /media
        - name: certs
          mountPath: /certs
        - name: templates
          mountPath: /templates
      volumes:
      - name: media
        emptyDir: {}
      - name: certs
        emptyDir: {}
      - name: templates
        emptyDir: {}
          
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-worker
  template:
    metadata:
      labels:
        app: authentik-worker
    spec:
    
      containers:
      - name: worker
        image: ghcr.io/goauthentik/server:latest
        args: ["worker"]
        resources:
          requests:
            cpu: 150m
            memory: 1024Mi
          limits:
            cpu: 150m
            memory: 1024Mi
        startupProbe:
          exec:
            command:
              - ak
              - healthcheck
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        livenessProbe:
          exec:
            command:
              - ak
              - healthcheck
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command:
              - ak
              - healthcheck
          failureThreshold: 2000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - name: media
          mountPath: /media
        - name: certs
          mountPath: /certs
        - name: templates
          mountPath: /templates
      volumes:
      - name: media
        emptyDir: {}
      - name: certs
        emptyDir: {}
      - name: templates
        emptyDir: {}
