manifests/integrated-tools/base/authentik/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
spec:
  selector:
    app: authentik-server
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
